# Animal-Shelter

./: .gitignore  pyproject.toml
accounts/: admin.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
animalshelter/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
animalshelter/migrations/: 0001_initial.py  0002_adoptionform_comments_alter_review_name.py  0002_alter_dog_photo.py  0003_alter_adoptionform_name.py  0003_alter_dog_photo.py  0004_alter_animal_sex.py  0004_alter_dog_age.py  0005_alter_animal_type_of_animal.py  0005_dog_breed.py  0006_remove_dog_fur.py  0006_rename_adoptionform_adoption.py  0007_news.py  0008_animal_delete_dog.py  0009_alter_animal_type_of_animal.py  0010_review_adoptionform.py
main/: settings.py  urls.py
static/css/: adoption.css  animal_detail.css  detail.css  dog_list.css  login.css  news_detail.css  registration.css  style.css  style.css.map  style.scss
static/js/: bootstrap.js
templates/: add_dog.html  add_news.html  adoption_requests.html  dog_detail.html  dog_list.html  header.html  index.html  news_detail.html  thank_you_page.html
templates/registration/: login.html  signup.html
